bootstrap/argo-cd/ingress.yaml
# setup the argocd-server port as NodePort

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-https
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: argocd-https
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3:774986117405:certificate/4c75b391-8db9-45db-a0b0-8a511f3bb14a
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: argocd-server
      port: 
        number: 443
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: / 
        backend:
          service:
            name: argocd-server
            port:
              number: 443
